--- a/index.html
+++ b/index.html
@@ -11,12 +11,50 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+
+    <!--font asowme  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <header>
-      <h1>this is herader</h1>
+      <nav class="navbar title-font">
+        <div>
+          <img src="./assets/logo.png" alt="" />
+          <h4>SCHOOL</h4>
+        </div>
+        <div>
+          <ul>
+            <li class="home">Home</li>
+            <li class="about">About</li>
+            <li class="facilities">Facilities</li>
+            <li class="admission">Admission</li>
+          </ul>
+        </div>
+
+        <div>
+          <button>Contact</button>
+        </div>
+        <div class="homebar">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+      </nav>
+
+      <div class="marquee-container">
+        <marquee
+          class="marquee"
+          behavior="scroll"
+          direction="left"
+          scrollamount="5"
+        >
+          Welcome to Our Website! Enjoy Your Visit! 🌟 | Learn More About Us |
+          Check Out Our Latest Updates! 🚀
+        </marquee>
+      </div>
+
+      
     </header>
 
     <main></main>
