--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     />
 
     <!--font asowme  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="responsive.css" />
@@ -38,8 +44,8 @@
           <button>Contact</button>
         </div>
         <div class="homebar">
-            <i class="fa-solid fa-bars"></i>
-          </div>
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </nav>
 
       <div class="marquee-container">
@@ -53,11 +59,69 @@
           Check Out Our Latest Updates! 🚀
         </marquee>
       </div>
-
-      
     </header>
 
-    <main></main>
+    <main>
+      <!-- hero section start -->
+      <section>
+        <div class="hero-container">
+          <!-- text  -->
+          <div>
+            <h1 class="hero-title"> <span class="empowering">Empowering</span> <br> students from small <br> age <span class="towards">towards vision</span></h1>
+            <p class="hero-discrib">
+              With the courage, Confidence, Creativity and Compassion to make 
+              their Unique Contribution in a Diverse and Dynamic World.
+            </p>
+            <button class="btn">Enroll Now</button>
+          </div>
+
+          <!-- img -->
+          <div>
+            <img src="./assets/hero-kids.png" alt="">
+          </div>
+        </div>
+      </section>
+
+      <!-- hero section end -->
+
+
+      <!-- Standard Curriculum start -->
+       <section>
+        <div>
+            <h1>Standard Curriculum</h1>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/kinder.png" alt="">
+                <h3>Kinder (3-6) Years</h3>
+                <p>Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                <p>Read More</p>
+            </div>
+            <div>
+                <img src="./assets/kinder.png" alt="">
+                <h3>Kinder (3-6) Years</h3>
+                <p>Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                <p>Read More</p>
+            </div>
+
+            <div>
+                <img src="./assets/kinder.png" alt="">
+                <h3>Kinder (3-6) Years</h3>
+                <p>Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                <p>Read More</p>
+            </div>
+        </div>
+       </section>
+ 
+      <!-- Standard Curriculum end -->
+    </main>
 
     <footer></footer>
   </body>
