--- a/index.html
+++ b/index.html
@@ -86,36 +86,38 @@
 
 
       <!-- Standard Curriculum start -->
-       <section>
-        <div>
-            <h1>Standard Curriculum</h1>
-        </div>
-
-        <div>
+       <section class="curriculum-container">
+        <div class="curriculum-content">
             <div>
-                <img src="./assets/kinder.png" alt="">
-                <h3>Kinder (3-6) Years</h3>
-                <p>Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
-                <p>Read More</p>
+                <h1 class="curriculum-title">Standard Curriculum</h1>
             </div>
-            <div>
-                <img src="./assets/kinder.png" alt="">
-                <h3>Kinder (3-6) Years</h3>
-                <p>Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
-                <p>Read More</p>
-            </div>
-
-            <div>
-                <img src="./assets/kinder.png" alt="">
-                <h3>Kinder (3-6) Years</h3>
-                <p>Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
-                <p>Read More</p>
+    
+            <div class="curriculum-card">
+                <div class="curriculum-card1 card">
+                    <img src="./assets/kinder.png" alt="">
+                    <h3>Kinder (3-6) Years</h3>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h5 class="read1">Read More</h5>
+                </div>
+                <div class="curriculum-card2 card">
+                    <img src="./assets/elementary.png" alt="">
+                    <h3>Kinder (3-6) Years</h3>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h5 class="read2">Read More</h5>
+                </div>
+    
+                <div class="curriculum-card3 card">
+                    <img src="./assets/middle.png" alt="">
+                    <h3>Kinder (3-6) Years</h3>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h5 class="read3">Read More</h5>
+                </div>
             </div>
         </div>
        </section>
