--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
         <div class="hero-container">
           <!-- text  -->
           <div>
-            <h1 class="hero-title"> <span class="empowering">Empowering</span> <br> students from small <br> age <span class="towards">towards vision</span></h1>
+            <h1 class="hero-title">
+              <span class="empowering">Empowering</span> <br />
+              students from small <br />
+              age <span class="towards">towards vision</span>
+            </h1>
             <p class="hero-discrib">
-              With the courage, Confidence, Creativity and Compassion to make 
+              With the courage, Confidence, Creativity and Compassion to make
               their Unique Contribution in a Diverse and Dynamic World.
             </p>
             <button class="btn">Enroll Now</button>
@@ -77,52 +81,107 @@
 
           <!-- img -->
           <div>
-            <img src="./assets/hero-kids.png" alt="">
+            <img src="./assets/hero-kids.png" alt="" />
           </div>
         </div>
       </section>
 
       <!-- hero section end -->
 
-
       <!-- Standard Curriculum start -->
-       <section class="curriculum-container">
+      <section class="curriculum-container">
         <div class="curriculum-content">
-            <div>
-                <h1 class="curriculum-title">Standard Curriculum</h1>
+          <div>
+            <h1 class="curriculum-title">Standard Curriculum</h1>
+          </div>
+
+          <div class="curriculum-card">
+            <div class="curriculum-card1 card">
+              <img src="./assets/kinder.png" alt="" />
+              <h3>Kinder (3-6) Years</h3>
+              <p>
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <h5 class="read1">Read More</h5>
             </div>
-    
-            <div class="curriculum-card">
-                <div class="curriculum-card1 card">
-                    <img src="./assets/kinder.png" alt="">
-                    <h3>Kinder (3-6) Years</h3>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
-                    <h5 class="read1">Read More</h5>
-                </div>
-                <div class="curriculum-card2 card">
-                    <img src="./assets/elementary.png" alt="">
-                    <h3>Kinder (3-6) Years</h3>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
-                    <h5 class="read2">Read More</h5>
-                </div>
-    
-                <div class="curriculum-card3 card">
-                    <img src="./assets/middle.png" alt="">
-                    <h3>Kinder (3-6) Years</h3>
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
-                    <h5 class="read3">Read More</h5>
-                </div>
+            <div class="curriculum-card2 card">
+              <img src="./assets/elementary.png" alt="" />
+              <h3>Kinder (3-6) Years</h3>
+              <p>
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <h5 class="read2">Read More</h5>
             </div>
+
+            <div class="curriculum-card3 card">
+              <img src="./assets/middle.png" alt="" />
+              <h3>Kinder (3-6) Years</h3>
+              <p>
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <h5 class="read3">Read More</h5>
+            </div>
+          </div>
+
+          <div class="arrow">
+            <p class="arrow-left"><i class="fa fa-chevron-left"></i></p>
+            <p class="arrow-right"><i class="fa fa-chevron-right"></i></p>
+          </div>
         </div>
-       </section>
- 
+      </section>
+
       <!-- Standard Curriculum end -->
+
+      <!-- Our Stories start-->
+      <section class="our-stories-container">
+        <div class="our-stories-content">
+          <div class="our-stories-parent-card">
+            <!-- left div -->
+            <div class="our-stories-left-div">
+              <img src="./assets/story-1.png" alt="" />
+              <div class="card-btn"><button>November 19, 2019</button></div>
+              <h2>A fun toddler coloring training on classroom</h2>
+              <p>
+                Beautiful branding for changes by Never Now in Australia.
+                changes is a platform for open discussion in an inclusive and
+                collaborative environment, providing the...
+              </p>
+            </div>
+            <!-- right div -->
+            <div class="our-stories-child-card our-stories-right-div">
+                <div class="child-div-1">
+                    <img src="./assets/story-2.png" alt="">
+                    <div class="chil-btn child-btn1"><button>November 19, 2019</button></div>
+                    <h2>Find out if a school fits the
+                        family’s needs</h2>
+                </div>
+                <div class="child-div-2">
+                    <img src="./assets/story-3.png" alt="">
+                    <div class="chil-btn child-btn2"><button>November 19, 2019</button></div>
+                    <h2>Summer math & literacy
+                        centres for kids</h2>
+                </div>
+                <div class="child-div-3">
+                    <img src="./assets/story-4.png" alt="">
+                    <div class="chil-btn child-btn3"><button>November 19, 2019</button></div>
+                    <h2>Classroom management
+                        techniques for new tutors</h2>
+                </div>
+                <div class="child-div-4">
+                    <img src="./assets/story-5.png" alt="">
+                   <div class="chil-btn child-btn4"> <button>November 19, 2019</button></div>
+                    <h2>Conversation rhymes
+                        improve kids listening</h2>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Our Stories end -->
     </main>
 
     <footer></footer>
