footer section commit

--- a/index.html
+++ b/index.html
@@ -178,12 +178,47 @@
                 </div>
             </div>
           </div>
+
+          <div class="our-stories-btn-div" >
+            <button class="our-stories-btn">View All</button>
+          </div>
         </div>
       </section>
 
       <!-- Our Stories end -->
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer-container">
+          <div class="footer-section logo-section">
+            <div class="logo">
+              <img src="./assets/Screenshot_2.png" alt="" class="logo-image">
+              <h2 class="footer-title">Kids <br> Education</h2>
+            </div>
+            
+            <p class="footer-description">
+                Kids' education builds a strong foundation for future success, fostering creativity, critical thinking, and social skills while promoting curiosity, knowledge, and lifelong learning habits.
+            </p>
+          </div>
+          <div class="footer-section about-section">
+            <h3 class="section-title">About School</h3>
+            <ul class="section-links">
+              <li><a href="#" class="footer-link">Home</a></li>
+              <li><a href="#" class="footer-link">About</a></li>
+              <li><a href="#" class="footer-link">Facilities</a></li>
+              <li><a href="#" class="footer-link">Admission</a></li>
+            </ul>
+          </div>
+          <div class="footer-section contact-section">
+            <h3 class="section-title">Keep In Touch</h3>
+            <div class="social-links">
+              <a href="#" class="social-icon facebook"><img src="./assets/fb.png" alt=""></a>
+              <a href="#" class="social-icon dribbble"><img src="./assets/dribble.png" alt=""></a>
+              <a href="#" class="social-icon twitter"><img src="./assets/google+.png" alt=""></a>
+              <a href="#" class="social-icon google"><img src="./assets/twitter.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
