--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
           Check Out Our Latest Updates! 🚀
         </marquee>
       </div>
+
+      <div class="border"></div>
     </header>
 
-    <main>
+    <!-- <main>
       <!-- hero section start -->
       <section>
         <div class="hero-container">
@@ -76,20 +78,20 @@
               With the courage, Confidence, Creativity and Compassion to make
               their Unique Contribution in a Diverse and Dynamic World.
             </p>
-            <button class="btn">Enroll Now</button>
-          </div>
+           <div class="hero-btn"> <button class="btn">Enroll Now</button></div>
+          </div> 
 
           <!-- img -->
-          <div>
-            <img src="./assets/hero-kids.png" alt="" />
+           <div>
+            <img class="image" src="./assets/hero-kids.png" alt="" />
           </div>
-        </div>
+        </div> 
       </section>
 
       <!-- hero section end -->
 
       <!-- Standard Curriculum start -->
-      <section class="curriculum-container">
+       <section class="curriculum-container">
         <div class="curriculum-content">
           <div>
             <h1 class="curriculum-title">Standard Curriculum</h1>
@@ -131,16 +133,19 @@
             <p class="arrow-right"><i class="fa fa-chevron-right"></i></p>
           </div>
         </div>
-      </section>
+      </section> 
 
       <!-- Standard Curriculum end -->
 
       <!-- Our Stories start-->
       <section class="our-stories-container">
         <div class="our-stories-content">
+            <div>
+                <h1 class="our-stories-title">Our Stories</h1>
+            </div>
           <div class="our-stories-parent-card">
             <!-- left div -->
-            <div class="our-stories-left-div">
+             <div class="our-stories-left-div">
               <img src="./assets/story-1.png" alt="" />
               <div class="card-btn"><button>November 19, 2019</button></div>
               <h2>A fun toddler coloring training on classroom</h2>
@@ -149,7 +154,7 @@
                 changes is a platform for open discussion in an inclusive and
                 collaborative environment, providing the...
               </p>
-            </div>
+            </div> 
             <!-- right div -->
             <div class="our-stories-child-card our-stories-right-div">
                 <div class="child-div-1">
@@ -181,14 +186,14 @@
 
           <div class="our-stories-btn-div" >
             <button class="our-stories-btn">View All</button>
-          </div>
+          </div> 
         </div>
-      </section>
+      </section> 
 
       <!-- Our Stories end -->
-    </main>
+    </main> 
 
-    <footer class="footer">
+     <footer class="footer">
         <div class="footer-container">
           <div class="footer-section logo-section">
             <div class="logo">
@@ -219,6 +224,6 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer> 
   </body>
 </html>
