--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
           <div class="footer-section contact-section">
             <h3 class="section-title">Keep In Touch</h3>
             <div class="social-links">
-              <a href="#" class="social-icon facebook"><img src="./assets/fb.png" alt=""></a>
-              <a href="#" class="social-icon dribbble"><img src="./assets/dribble.png" alt=""></a>
-              <a href="#" class="social-icon twitter"><img src="./assets/google+.png" alt=""></a>
-              <a href="#" class="social-icon google"><img src="./assets/twitter.png" alt=""></a>
+              <a href="#"><img src="./assets/fb.png" alt=""></a>
+              <a href="#"><img src="./assets/dribble.png" alt=""></a>
+              <a href="#"><img src="./assets/google+.png" alt=""></a>
+              <a href="#"><img src="./assets/twitter.png" alt=""></a>
             </div>
           </div>
         </div>
