--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
-    <header>
+    <header class="title-font">
       <nav class="navbar title-font">
         <div>
           <img src="./assets/logo.png" alt="" />
@@ -69,12 +69,12 @@
         <div class="hero-container">
           <!-- text  -->
           <div>
-            <h1 class="hero-title">
-              <span class="empowering">Empowering</span> <br />
+            <h1 class="hero-title title-font">
+              <span class="empowering ">Empowering</span> <br />
               students from small <br />
               age <span class="towards">towards vision</span>
             </h1>
-            <p class="hero-discrib">
+            <p class="hero-discrib font">
               With the courage, Confidence, Creativity and Compassion to make
               their Unique Contribution in a Diverse and Dynamic World.
             </p>
@@ -94,37 +94,37 @@
        <section class="curriculum-container">
         <div class="curriculum-content">
           <div>
-            <h1 class="curriculum-title">Standard Curriculum</h1>
+            <h1 class="curriculum-title title-font">Standard Curriculum</h1>
           </div>
 
           <div class="curriculum-card">
             <div class="curriculum-card1 card">
               <img src="./assets/kinder.png" alt="" />
-              <h3>Kinder (3-6) Years</h3>
-              <p>
+              <h3 class="title-font">Kinder (3-6) Years</h3>
+              <p class="font">
                 Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mu sdis parturient
               </p>
-              <h5 class="read1">Read More</h5>
+              <h5 class="read1 font">Read More</h5>
             </div>
             <div class="curriculum-card2 card">
               <img src="./assets/elementary.png" alt="" />
-              <h3>Kinder (3-6) Years</h3>
-              <p>
+              <h3 class="title-font">Kinder (3-6) Years</h3>
+              <p class="font">
                 Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mu sdis parturient
               </p>
-              <h5 class="read2">Read More</h5>
+              <h5 class="read2 font">Read More</h5>
             </div>
 
             <div class="curriculum-card3 card">
               <img src="./assets/middle.png" alt="" />
-              <h3>Kinder (3-6) Years</h3>
-              <p>
+              <h3 class="title-font">Kinder (3-6) Years</h3>
+              <p class="font">
                 Cum sociis natoque penatibus et magnis dis parturient montes,
                 nascetur ridiculus mu sdis parturient
               </p>
-              <h5 class="read3">Read More</h5>
+              <h5 class="read3 font">Read More</h5>
             </div>
           </div>
 
@@ -141,15 +141,15 @@
       <section class="our-stories-container">
         <div class="our-stories-content">
             <div>
-                <h1 class="our-stories-title">Our Stories</h1>
+                <h1 class="our-stories-title title-font">Our Stories</h1>
             </div>
           <div class="our-stories-parent-card">
             <!-- left div -->
              <div class="our-stories-left-div">
               <img src="./assets/story-1.png" alt="" />
-              <div class="card-btn"><button>November 19, 2019</button></div>
-              <h2>A fun toddler coloring training on classroom</h2>
-              <p>
+              <div class="card-btn"><button class="title-font">November 19, 2019</button></div>
+              <h2 class="title-font">A fun toddler coloring training on classroom</h2>
+              <p class="font">
                 Beautiful branding for changes by Never Now in Australia.
                 changes is a platform for open discussion in an inclusive and
                 collaborative environment, providing the...
@@ -159,33 +159,33 @@
             <div class="our-stories-child-card our-stories-right-div">
                 <div class="child-div-1">
                     <img src="./assets/story-2.png" alt="">
-                    <div class="chil-btn child-btn1"><button>November 19, 2019</button></div>
-                    <h2>Find out if a school fits the
+                    <div class="chil-btn child-btn1"><button class="title-font">November 19, 2019</button></div>
+                    <h2 class="title-font">Find out if a school fits the
                         family’s needs</h2>
                 </div>
                 <div class="child-div-2">
                     <img src="./assets/story-3.png" alt="">
-                    <div class="chil-btn child-btn2"><button>November 19, 2019</button></div>
-                    <h2>Summer math & literacy
+                    <div class="chil-btn child-btn2"><button class="title-font">November 19, 2019</button></div>
+                    <h2 class="title-font">Summer math & literacy
                         centres for kids</h2>
                 </div>
                 <div class="child-div-3">
                     <img src="./assets/story-4.png" alt="">
-                    <div class="chil-btn child-btn3"><button>November 19, 2019</button></div>
-                    <h2>Classroom management
+                    <div class="chil-btn child-btn3"><button class="title-font">November 19, 2019</button></div>
+                    <h2 class="title-font">Classroom management
                         techniques for new tutors</h2>
                 </div>
                 <div class="child-div-4">
                     <img src="./assets/story-5.png" alt="">
-                   <div class="chil-btn child-btn4"> <button>November 19, 2019</button></div>
-                    <h2>Conversation rhymes
+                   <div class="chil-btn child-btn4"> <button class="title-font">November 19, 2019</button></div>
+                    <h2 class="title-font">Conversation rhymes
                         improve kids listening</h2>
                 </div>
             </div>
           </div>
 
           <div class="our-stories-btn-div" >
-            <button class="our-stories-btn">View All</button>
+            <button class="our-stories-btn title-font">View All</button>
           </div> 
         </div>
       </section> 
@@ -198,14 +198,14 @@
           <div class="footer-section logo-section">
             <div class="logo">
               <img src="./assets/Screenshot_2.png" alt="" class="logo-image">
-              <h2 class="footer-title">Kids <br> Education</h2>
+              <h2 class="footer-title title-font">Kids <br> Education</h2>
             </div>
             
-            <p class="footer-description">
+            <p class="footer-description font">
                 Kids' education builds a strong foundation for future success, fostering creativity, critical thinking, and social skills while promoting curiosity, knowledge, and lifelong learning habits.
             </p>
           </div>
-          <div class="footer-section about-section">
+          <div class="footer-section about-section title-font">
             <h3 class="section-title">About School</h3>
             <ul class="section-links">
               <li><a href="#" class="footer-link">Home</a></li>
@@ -215,7 +215,7 @@
             </ul>
           </div>
           <div class="footer-section contact-section">
-            <h3 class="section-title">Keep In Touch</h3>
+            <h3 class="section-title title-font">Keep In Touch</h3>
             <div class="social-links">
               <a href="#"><img src="./assets/fb.png" alt=""></a>
               <a href="#"><img src="./assets/dribble.png" alt=""></a>
